--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -132,7 +132,7 @@
  	 	 	 	"eng": "Shangri-La Market Street"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[プレイヤーマーケット] \r\n         シャングリ・ラの有名な商店街。.屋台が通りを埋め尽くす. \r\n         大抵のものはここで見つけることができる.",
+ 	 	 	 	"trans": "[プレイヤーマーケット] \r\n         シャングリ・ラの有名な商店街. 屋台が通りを埋め尽くす. \r\n         大抵のものはここで見つけることができる.",
  	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street.\r\n        Maybe you can find something you need or set up shop yourself."
  	 	 	},
  	 	 	"toMainHub": {
@@ -344,7 +344,7 @@
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "次のエリアへ進むには,ダンジョンでシークレットキーのかけらをあつめ, \r\n         [ターミナル]で次のエリアのキーを入手しましょう。",
+ 	 	 	 	"trans": "次のエリアへ進むには,ダンジョンでシークレットキーのかけらをあつめ, \r\n         [ターミナル]で次のエリアのキーを入手しましょう.",
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"description": {
@@ -588,7 +588,7 @@
  	 	 	 	"eng": "Hack SL Data Fortress"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Shangri-Laデータ防壁をターゲットにしたサイバースペースでの共同攻撃を開始.\r\n        攻撃が成功した場合,全ユーザーに対してのエクスプロイトの送信をデータ防壁に強制することが可能。",
+ 	 	 	 	"trans": "Shangri-Laデータ防壁をターゲットにしたサイバースペースでの共同攻撃を開始.\r\n        攻撃が成功した場合,全ユーザーに対してのエクスプロイトの送信をデータ防壁に強制することが可能.",
  	 	 	 	"eng": "Launch a collaborative attack in cyberspace targeting the Shangri-La Data Fortress.\r\nIf the attack succeeds, it’s possible to force the Data Fortress to transmit exploits to all cybernetically connected users."
  	 	 	}
  	 	}
@@ -686,7 +686,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "シークレットキーのかけらはシークレットキーを入手するために使用します. \r\n                                 シティーセンター [ハブ]でターミナルを使用し.${segmentDisplayName}シークレットキーを獲得しましょう. \r\n                                 必要な3つのキーは各ダンジョン（ノーマル、チャレンジどれでも）でそれぞれ入手可能。 \r\n                                 3つのキーを獲得すると、ターミナルを使って次のエリアへのキーをブルートフォース（クラフト）できる。",
+ 	 	 	 	"trans": "シークレットキーのかけらはシークレットキーを入手するために使用します. \r\n                                 シティーセンター [ハブ]でターミナルを使用し.${segmentDisplayName}シークレットキーを獲得しましょう. \r\n                                 必要な3つのキーは各ダンジョン（ノーマル・チャレンジどれでも）でそれぞれ入手可能. \r\n                                 3つのキーを獲得すると,ターミナルを使って次のエリアへのキーをクラフトできる.",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -703,7 +703,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "${typeName}キャッシュには,分子合成式3Dプリントに必要な情報が含まれています. \r\n                     [セントラルハブ]で[分子合成式3Dプリンタ]で${typeName}を作成できます. \r\n                    \r\n                     PRO TIP：プリンタから得られるアイテムのレベルはクラフトスキルに依存する。 \r\n                     [ゴミみたいな]ものから先にプリントしていこう。コストをかけずにクラフトスキルを上げることができる。",
+ 	 	 	 	"trans": "${typeName}キャッシュには,分子合成式3Dプリントに必要な情報が含まれています. \r\n                     [セントラルハブ]で[分子合成式3Dプリンタ]で${typeName}を作成できます. \r\n                    \r\n                     PRO TIP：プリンタから得られるアイテムのレベルはクラフトスキルに依存する. \r\n                     [ゴミみたいな]ものから先にプリントしていこう. コストをかけずにクラフトスキルを上げることができる/",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -783,7 +783,7 @@
  	 	 	 	"eng": "Military Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍隊で標準的に使用されている注入可能なナノマシン.戦闘中に怪我を治療することができる。",
+ 	 	 	 	"trans": "軍隊で標準的に使用されている注入可能なナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They are capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -793,7 +793,7 @@
  	 	 	 	"eng": "Advanced Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍で使用されている注射用ナノマシン.戦闘中に怪我を治療することができる。",
+ 	 	 	 	"trans": "軍で使用されている注射用ナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -803,7 +803,7 @@
  	 	 	 	"eng": "High Quality Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍で使用されている注射用ナノマシン。戦闘中に怪我を治療することができる",
+ 	 	 	 	"trans": "軍で使用されている注射用ナノマシン. 戦闘中に怪我を治療することができる/",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -813,7 +813,7 @@
  	 	 	 	"eng": "Rare Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍用機密の注射用ナノマシン。戦闘中に怪我を治療することができる。",
+ 	 	 	 	"trans": "軍用機密の注射用ナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -833,7 +833,7 @@
  	 	 	 	"eng": "Degraded Repair drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "旧型の修理用ドローン.周辺のプレーヤーを修理または治療することができる",
+ 	 	 	 	"trans": "旧型の修理用ドローン. 周辺のプレーヤーを修理または治療することができる",
  	 	 	 	"eng": "Old repair drone, capable of repairing or heal nearby players"
  	 	 	}
  	 	},
@@ -843,7 +843,7 @@
  	 	 	 	"eng": "Degraded nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "旧式のナノドローン.近くのプレイヤーを治療するために数千個ものナノマシンを送り出す.",
+ 	 	 	 	"trans": "旧式のナノドローン. 近くのプレイヤーを治療するために数千個ものナノマシンを送り出す.",
  	 	 	 	"eng": "Old nano drone, capable of dispatching thousands of nano machines to heal nearby players"
  	 	 	}
  	 	},
