--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -199,7 +199,7 @@
  	 	"segment": {
  	 	 	"locked": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "이전 역의 세 개의 던전에서 3개의 열쇠조각을 모두 모으면, \r\n                    [터미널]에서 이번 역에 출입할 수 있는 열쇠를 제작할수 있습니다",
+ 	 	 	 	 	"trans": "이전 역의 세 개의 던전에서 3개의 암호 조각을 모두 모으면, \r\n                    [터미널]에서 이번 역에 출입할 수 있는 암호 키를 제작할수 있습니다",
  	 	 	 	 	"eng": "Gather all 3 different Key Fragments from Dungeons in each 3 zones in previous station, \r\n                    then go to [Terminal] at City Center [Hub] to brute-force (Craft) the key required to unlock this area"
  	 	 	 	}
  	 	 	},
@@ -347,7 +347,7 @@
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "다음 지역으로 이동하려면 던전에서 비밀 열쇠 조각을 모으고, \r\n        터미널을 이용하여 다음 지역 열쇠를 제작해야 합니다",
+ 	 	 	 	"trans": "다음 지역으로 이동하려면 던전에서 암호 조각을 모으고, \r\n        터미널의 전수조사를 이용하여 다음 지역으로 통하는 암호 키를 해독해야 합니다",
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"description": {
@@ -694,14 +694,14 @@
  	 	 	 	 	"segmentDisplayName",
  	 	 	 	 	"fragmentNum"
  	 	 	 	],
- 	 	 	 	"trans": "${segmentDisplayName} 열쇠 파편 ${fragmentNum}",
+ 	 	 	 	"trans": "${segmentDisplayName} 암호 조각 ${fragmentNum}",
  	 	 	 	"eng": "${segmentDisplayName} Key Fragment ${fragmentNum}"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "비밀 열쇠를 무차별 대입으로 얻기 위한 열쇠 파편 입니다.\r\n                                도심지의 [터미널]을 사용하여 ${segmentDisplayName} 비밀 열쇠를 무차별 대입으로 얻을 수 있습니다.\r\n                                필요한 3가지 열쇠는 각각의 던전에서 얻을 수 있습니다. (난이도 상관없음),\r\n                                3개의 키를 모두 획득했다면, 단말기에서 다음 지역으로 가기 위한 열쇠를 무차별 대입을 통해 만들 수 있습니다.",
+ 	 	 	 	"trans": "전수조사를 통하여 암호키를 해독하기 위한 조각입니다.\r\n                                도심지의 [터미널]에서 전수조사를 통하여 ${segmentDisplayName} 암호 키를 획득할 수 있습니다.\r\n                                필요한 3가지의 조각은 각각의 던전에서 얻을 수 있습니다. (난이도 상관없음),\r\n                                3개의 조각을 모두 획득했다면, 터미널의 전수조사를 통해 다음 지역을 가기 위한 암호 키를 해독할 수 있습니다.",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -1109,7 +1109,7 @@
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "갱단이 활동하기 위한 잡다한 아이템과 자원들이 포함되어 있습니다. \r\n         갱단 본부에 보내려면 '사용'을 클릭하십시오",
+ 	 	 	 	"trans": "갱단이 활동하기 위한 잡다한 아이템과 자원들이 들어 있습니다. \r\n         갱단 본부에 보내려면 '사용'을 클릭하십시오",
  	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
  	 	 	}
  	 	},
@@ -1129,7 +1129,7 @@
  	 	 	 	"eng": "Equipment Calibration Core"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "이 암시장 메모리 조각에는 장비를 업그레이드하는 과정에서 필요한 고도화된 암호 알고리즘 및 회로도가 포함되어 있습니다.",
+ 	 	 	 	"trans": "이 암시장 메모리 조각에는 장비를 업그레이드 하는데에 필요한 고도화된 암호 알고리즘 및 회로도가 들어 있습니다.",
  	 	 	 	"eng": "A black market memory shard contains highly encrypted algorithm and schematic that is crucial in the process of upgrading equipments"
  	 	 	}
  	 	},
@@ -1139,7 +1139,7 @@
  	 	 	 	"eng": "Calibration AI Shard (5%)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 고급 AI 조각이 포함되어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 5% 줄입니다 (중첩가능).",
+ 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 전문 AI 조각이 들어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 5% 줄입니다 (중첩가능).",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 5% (stackable) for 5 minutes."
  	 	 	}
  	 	},
@@ -1149,7 +1149,7 @@
  	 	 	 	"eng": "Calibration AI Shard (10%)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 고급 AI 조각이 포함되어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 10% 줄입니다 (중첩가능).",
+ 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 전문 AI 조각이 들어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 10% 줄입니다 (중첩가능).",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 10% (stackable) for 5 minutes."
  	 	 	}
  	 	},
@@ -1159,7 +1159,7 @@
  	 	 	 	"eng": "Calibration AI Shard (50%)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 고급 AI 조각이 포함되어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 50% 줄입니다 (중첩가능). 이 효과는 온라인인 모든 플레이어들에게 적용됩니다.",
+ 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 전문 AI 조각이 들어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 50% 줄입니다 (중첩가능). 이 효과는 온라인인 모든 플레이어들에게 적용됩니다.",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 50% (stackable) for 5 minutes. This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -1169,7 +1169,7 @@
  	 	 	 	"eng": "Calibration AI Shard (100%)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 고급 AI 조각이 포함되어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 100% 줄입니다 (중첩가능). 이 효과는 온라인 상태의 모든 플레이어에게 적용됩니다. \r\n         한마디로 개쩔어요.",
+ 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 전문 AI 조각이 들어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 100% 줄입니다 (중첩가능). 이 효과는 온라인 상태의 모든 플레이어에게 적용됩니다. \r\n         한마디로 개쩔어요.",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 100% (stackable) for 5 minutes. This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -1279,7 +1279,7 @@
  	 	 	 	"eng": "Calibration AI Shard (50%) [EVENT]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "장비 강화를 지원하도록 설계된 고급 AI 조각이 포함되어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 50% 줄이며 (중첩가능), 당신에게만 영향을 줍니다. \r\n         갱단 본부에서 아이템을 보정 할 수 있지만, 먼저 갱단에 가입하거나 창설해야 합니다.",
+ 	 	 	 	"trans": "장비 업그레이드를 돕기 위해 설계된 전문 AI 조각이 들어 있습니다. \r\n         사용하면 5분 동안 강화 실패 확률을 50% 줄여주며 (중첩가능), 당신에게만 영향을 줍니다. \r\n         갱단 본부에서 아이템을 보정 할 수 있지만, 먼저 갱단에 가입하거나 창설해야 합니다.",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 50% for 5 minutes. this only affect yourself.\r\n        You can calibrate items in your Gang Headquarters, you must join or start a gang first."
  	 	 	}
  	 	},
@@ -1384,7 +1384,7 @@
  	 	 	 	 	"legendaryChance",
  	 	 	 	 	"maxStack"
  	 	 	 	],
- 	 	 	 	"trans": "고급 아이템의 드롭 확률을 높이기 위한 고급 취약점이 포함된 샤드입니다. 잠긴 전설 상자를 열 때 전설 (${legendaryChance}%) 및 에픽 (${epicChance}%) 아이템의 드롭 확률을 증가시킵니다. 20분 동안 최대 ${maxStack}번까지 중첩될 수 있습니다. 크리스마스 시즌에 신비한 상자를 얻을 수 있습니다.",
+ 	 	 	 	"trans": "고급 아이템의 드롭 확률을 높이기 위한 고급 취약점이 들어있는 샤드입니다. 잠긴 전설 상자를 열 때 전설 (${legendaryChance}%) 및 에픽 (${epicChance}%) 아이템의 드롭 확률을 증가시킵니다. 20분 동안 최대 ${maxStack}번까지 중첩될 수 있습니다. 크리스마스 시즌에 신비한 상자를 얻을 수 있습니다.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for 20 minutes. Extra chance to get Mystery Container during Christmas season."
  	 	 	},
  	 	 	"descriptionv2": {
@@ -1394,7 +1394,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "고급 아이템의 드롭 확률을 높이기 위한 고급 취약점이 포함된 샤드입니다. 잠긴 전설 상자를 열 때 전설 (${legendaryChance}%) 및 에픽 (${epicChance}%) 아이템의 드롭 확률을 증가시킵니다. ${time}분 동안 최대 ${maxStack}번 까지 중첩될 수 있습니다. 크리스마스 시즌에 신비한 상자를 얻을 수 있습니다.",
+ 	 	 	 	"trans": "고급 아이템의 드롭 확률을 높이기 위한 고급 취약점이 들어있는 샤드입니다. 잠긴 전설 상자를 열 때 전설 (${legendaryChance}%) 및 에픽 (${epicChance}%) 아이템의 드롭 확률을 증가시킵니다. ${time}분 동안 최대 ${maxStack}번 까지 중첩될 수 있습니다. 크리스마스 시즌에 신비한 상자를 얻을 수 있습니다.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for ${time} minutes. Extra chance to get Mystery Container during Christmas season."
  	 	 	},
  	 	 	"descriptionv3": {
@@ -1404,7 +1404,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "고급 아이템의 드롭 확률을 높이기 위한 고급 취약점이 포함된 샤드입니다. 잠긴 전설 상자를 열 때 전설 (${legendaryChance}%) 및 에픽 (${epicChance}%) 아이템의 드롭 확률을 증가시킵니다 (중첩불가). *주의: 버프가 활성화 된 후에 상자 열기 작업을 시작해야 버프가 적용됩니다*",
+ 	 	 	 	"trans": "고급 아이템의 드롭 확률을 높이기 위한 고급 취약점이 들어있는 샤드입니다. 잠긴 전설 상자를 열 때 전설 (${legendaryChance}%) 및 에픽 (${epicChance}%) 아이템의 드롭 확률을 증가시킵니다 (중첩불가). *주의: 버프가 활성화 된 후에 상자 열기 작업을 시작해야 버프가 적용됩니다*",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -1427,7 +1427,7 @@
  	 	 	 	 	"percent",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "장비를 업그레이드하는 데 도움이되도록 설계된 사전 AI의 조각을 포함합니다. 사용될 때 ${percent} % (쌓을 수있는)의 파괴적인 실패의 가능성을 ${duration} 분으로 줄입니다",
+ 	 	 	 	"trans": "장비를 업그레이드하는 데 도움을 주도록 설계된 전문 AI가 들어있습니다. 사용하면 ${duration} 분동안 장비가 파괴될 확률을 ${percent} % 줄여줍니다.(중첩 가능) ",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
  	 	 	}
  	 	},
@@ -1438,7 +1438,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "장비를 업그레이드하는 데 도움이되도록 설계된 사전 AI의 조각을 포함합니다. 사용될 때 ${percent} % (${maxStack} 시간 동안 쌓을 수 있음)가 ${duration} 분 (${maxStack} 회의)에 의해 파괴적인 실패의 가능성을 줄입니다.이 효과는 모든 플레이어에게 온라인에 적용됩니다",
+ 	 	 	 	"trans": "장비를 업그레이드하는 데 도움을 주도록 설계된 전문 AI가 들어있습니다. 사용하면 ${duration} 분동안 장비가 파괴될 확률을 ${percent} % 줄여줍니다.(최대 ${maxStack} 회 중첩 가능) .이 효과는 모든 플레이어에게 온라인에 적용됩니다",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -1558,11 +1558,11 @@
  	 	 	"vars": [
  	 	 	 	"segmentDisplayName"
  	 	 	],
- 	 	 	"trans": "${segmentDisplayName} 비밀 열쇠",
+ 	 	 	"trans": "${segmentDisplayName} 암호 키",
  	 	 	"eng": "${segmentDisplayName} Secret Key"
  	 	},
  	 	"unlockVerb": {
- 	 	 	"trans": "무차별 대입",
+ 	 	 	"trans": "전수 조사",
  	 	 	"eng": "brute-force"
  	 	},
  	 	"bruteForce": {
@@ -1572,7 +1572,7 @@
  	 	 	 	 	"segmentMinLevel",
  	 	 	 	 	"segmentMaxLevel"
  	 	 	 	],
- 	 	 	 	"trans": "${segmentDisplayName} 비밀 열쇠 (LV ${segmentMinLevel} - ${segmentMaxLevel})",
+ 	 	 	 	"trans": "${segmentDisplayName} 암호 키 (LV ${segmentMinLevel} - ${segmentMaxLevel})",
  	 	 	 	"eng": "${segmentDisplayName} Secret Key (lv ${segmentMinLevel} - ${segmentMaxLevel})"
  	 	 	}
  	 	}
@@ -1582,7 +1582,7 @@
  	 	 	"vars": [
  	 	 	 	"segmentDisplayName"
  	 	 	],
- 	 	 	"trans": "${segmentDisplayName}에 위치한 던전들에서 3가지 열쇠 조각을 얻으세요. \r\n                이 조각들은 다음 구역으로 가는 열쇠를 만들 때 사용됩니다. \r\n                 열쇠를 제작하려면 [중앙 허브]의 [터미널]로 이동하세요",
+ 	 	 	"trans": "${segmentDisplayName}에 위치한 던전들에서 3가지 암호 조각을 얻으세요. \r\n                이 조각들은 다음 구역으로 가는 암호 키를 해독할 때 사용됩니다. \r\n                 암호 키를 해독하려면 [중앙 허브]의 [터미널]로 이동하세요",
  	 	 	"eng": "Acquire 3 different Key Fragments from each dungeons located in ${segmentDisplayName},\r\n                these are used to create the key to next zone.\r\n                To craft the key, go to terminal in [HUB]",
  	 	 	"name": {
  	 	 	 	"vars": [
@@ -1595,7 +1595,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "${segmentDisplayName}에 위치한 던전들에서 3가지 열쇠 조각을 얻으세요. \r\n                이 조각들은 다음 구역으로 가는 열쇠를 만들 때 사용됩니다. \r\n                 열쇠를 제작하려면 [중앙 허브]의 [터미널]로 이동하세요",
+ 	 	 	 	"trans": "${segmentDisplayName}에 위치한 던전들에서 3가지 암호 조각을 얻으세요. \r\n               이 조각들은 다음 구역으로 가는 암호 키를 해독할 때 사용됩니다. \r\n                 암호 키를 해독하려면 [중앙 허브]의 [터미널]로 이동하세요",
  	 	 	 	"eng": "Acquire 3 different Key Fragments from each dungeons located in ${segmentDisplayName},\r\n                these are used to create the key to next zone.\r\n                To craft the key, go to terminal in [HUB]"
  	 	 	}
  	 	},
@@ -2606,7 +2606,7 @@
  	 	 	 	"eng": "items"
  	 	 	},
  	 	 	"secretKeys": {
- 	 	 	 	"trans": "비밀 열쇠",
+ 	 	 	 	"trans": "암호 키",
  	 	 	 	"eng": "secret keys"
  	 	 	},
  	 	 	"equipped": {
@@ -2697,15 +2697,15 @@
  	 	},
  	 	"secretKey": {
  	 	 	"title": {
- 	 	 	 	"trans": "비밀 열쇠",
+ 	 	 	 	"trans": "암호 키",
  	 	 	 	"eng": "Secret Keys"
  	 	 	},
  	 	 	"noKeysTitle": {
- 	 	 	 	"trans": "비밀 열쇠가 없습니다",
+ 	 	 	 	"trans": "암호 키가 없습니다",
  	 	 	 	"eng": "You don't have any secret keys"
  	 	 	},
  	 	 	"noKeysSubtitle": {
- 	 	 	 	"trans": "던전에서 비밀 열쇠를 얻을 수 있습니다",
+ 	 	 	 	"trans": "던전에서 암호 키를 얻을 수 있습니다",
  	 	 	 	"eng": "You can obtain secret keys from Dungeons"
  	 	 	}
  	 	},
@@ -3377,7 +3377,7 @@
  	 	 	 	"eng": "social"
  	 	 	},
  	 	 	"keys": {
- 	 	 	 	"trans": "열쇠",
+ 	 	 	 	"trans": "키",
  	 	 	 	"eng": "keys"
  	 	 	},
  	 	 	"profile": {
@@ -3596,7 +3596,7 @@
  	 	 	"eng": "Donate"
  	 	},
  	 	"noSecretKey": {
- 	 	 	"trans": " 비밀 열쇠가 없습니다",
+ 	 	 	"trans": " 암호 키가 없습니다",
  	 	 	"eng": " No secret key"
  	 	},
  	 	"globalEffects": {
