--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -206,7 +206,7 @@
  	 	 	 	"eng": "Automatic Recycler"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Recycleur entièrement automatisé, capable de recycler des objets en simple pièces technologiques",
+ 	 	 	 	"trans": "Recycleur entièrement automatisé, capable de recycler des objets en 'Pièces technologiques'",
  	 	 	 	"eng": "Fully automated recycler, capable of recycling items to their basic scrap form"
  	 	 	}
  	 	}
@@ -990,11 +990,11 @@
  	 	},
  	 	"backpack1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Vieille pochette",
+ 	 	 	 	"trans": "Vieille bourse",
  	 	 	 	"eng": "Old Pouch"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Une ancienne pochette oubliée , \r\n        il y a une drôle de grenouille de dessin animé avec une grande bouche et des lèvres rouges sur le côté de la pochette. ,\r\n        La signification de cet ancien dessin de mauvais augure est inconnue, mais elle est pratique pour y conserver un petit objet.\r\n        augmente l'espace de l'inventaire lorsqu'elle est équipée.",
+ 	 	 	 	"trans": "Une ancienne bourse abandonnée , \r\n        il y a une drôle de grenouille de dessin animé avec une grande bouche et des lèvres rouges sur le côté de la bourse. ,\r\n        La signification de cet ancien dessin de mauvais augure est inconnue, mais elle est pratique pour y conserver un petit objet.\r\n        augmente l'espace de l'inventaire lorsqu'elle est équipée.",
  	 	 	 	"eng": "A forgotten ancient pouch, \r\n        there is a weird cartoon frog with big mouth and red lips drawing at the side of it,\r\n        the meaning of the ancient ominous drawing is unknown, but it is handy for keep some small object in it.\r\n        increase inventory space when equipped."
  	 	 	}
  	 	},
@@ -1020,7 +1020,7 @@
  	 	},
  	 	"backpack4": {
  	 	 	"name": {
- 	 	 	 	"trans": "Mallette de bureau standard",
+ 	 	 	 	"trans": "Mallette de bureau",
  	 	 	 	"eng": "Employee Office Case"
  	 	 	},
  	 	 	"description": {
@@ -1034,7 +1034,7 @@
  	 	 	 	"eng": "Autonomous Storage Unit"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un robot militaire d'occasion conçu pour transporter de l'équipement et te suivre de manière autonome,\r\n        avec ses six pattes solides qui imitent le mouvement des araignées et une IA avancée à bord, \r\n        il peut te suivre rapidement et silencieusement tout en évitant de te gêner lors de missions que tu effectue",
+ 	 	 	 	"trans": "Un robot militaire d'occasion conçu pour transporter de l'équipement. Il suit son propriétaire de manière autonome,\r\n        avec ses six pattes solides qui imitent le mouvement des araignées et une IA avancée à bord, \r\n        il peut te suivre rapidement et silencieusement tout en évitant de te gêner lors de missions que tu effectue",
  	 	 	 	"eng": "An military used bot designed to carry your equipments and follows you autonomously,\r\n        with it's six strong legs that imitates the movement of spiders and a advance onboard AI, \r\n        it can follow you swiftly and quietly while it avoids get in the way of whatever mission you are performing"
  	 	 	}
  	 	},
@@ -2309,7 +2309,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Recycler l'objet",
+ 	 	 	 	"trans": "Recycler un objet",
  	 	 	 	"eng": "Recycle Item"
  	 	 	},
  	 	 	"selectAmount": {
@@ -2880,7 +2880,7 @@
  	 	},
  	 	"landing": {
  	 	 	"subtile": {
- 	 	 	 	"trans": "MMORPG textuel Cyberpunk",
+ 	 	 	 	"trans": "MMORPG Textuel Cyberpunk",
  	 	 	 	"eng": "Cyberpunk Text-based MMORPG"
  	 	 	},
  	 	 	"description1": {
@@ -2916,7 +2916,7 @@
  	 	 	 	"eng": "Create Account"
  	 	 	},
  	 	 	"loginPageButton": {
- 	 	 	 	"trans": "Vous avez déja un compte ?",
+ 	 	 	 	"trans": "As-tu déja un compte ?",
  	 	 	 	"eng": "Have account?"
  	 	 	}
  	 	},
@@ -3009,7 +3009,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "'Le Global Skip' permet de passer le temps d'attente AFK, et de le terminer instantanément. \n     Cet effet sera appliqué à tous les joueurs effectuant une tâche AFK",
+ 	 	 	 	 	"trans": "Le 'Global Skip' permet de passer le temps d'attente AFK, et de le terminer instantanément. \n     Cet effet sera appliqué à tous les joueurs effectuant une tâche AFK",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -4076,7 +4076,7 @@
  	 	},
  	 	"backpack1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Vieille pochette",
+ 	 	 	 	"trans": "Vieille bourse",
  	 	 	 	"eng": "Old Pouch"
  	 	 	}
  	 	},
@@ -4098,7 +4098,7 @@
  	 	},
  	 	"backpack4": {
  	 	 	"name": {
- 	 	 	 	"trans": "Mallette d'employé de bureau",
+ 	 	 	 	"trans": "Mallette de bureau",
  	 	 	 	"eng": "Employee Office Case"
  	 	 	}
  	 	},
@@ -4211,7 +4211,7 @@
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
- 	 	 	 	 	"trans": "Tes critiques positives m'aideront beaucoup et permettront d'amener plus de joueurs dans notre communauté !",
+ 	 	 	 	 	"trans": "Tes commentaires positifs m'aideront et permettront d'amener plus de joueurs dans notre communauté !",
  	 	 	 	 	"eng": "Your good review is going to help me much and bring more players into our community!"
  	 	 	 	}
  	 	 	},
@@ -5385,7 +5385,7 @@
  	 	 	"eng": "of Evasion"
  	 	},
  	 	"pocketed": {
- 	 	 	"trans": "avec pochettes",
+ 	 	 	"trans": "avec poches",
  	 	 	"eng": "with pockets"
  	 	},
  	 	"criticalChanceArmor": {
