--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -2672,11 +2672,11 @@
  	 	 	 	"eng": "Attachable Upgrades"
  	 	 	},
  	 	 	"cantEquip": {
- 	 	 	 	"trans": "Ton niveau est trop faible pour pouvoir l'équipper",
+ 	 	 	 	"trans": "Ton niveau est trop faible pour équiper cet objet",
  	 	 	 	"eng": "Your level is too low for this item"
  	 	 	},
  	 	 	"noAttachableUpgrades": {
- 	 	 	 	"trans": "Tu n'as actuellement aucun module de mise à niveau",
+ 	 	 	 	"trans": "Tu n'as actuellement aucun module d'amélioration",
  	 	 	 	"eng": " You currently do not have any upgrade modules"
  	 	 	}
  	 	},
@@ -2722,7 +2722,7 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Le niveau des équipements imprimés et basé sur ton niveau d'impression, augmentez votre rang d'impression en imprimant plus d'objets",
+ 	 	 	 	 	 	"trans": "Le niveau des équipements imprimés est basé sur ton niveau d'impression, augmente ton rang d'impression en imprimant plus d'objets",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
