Updated translation for Simplified Chinese
Edited some translation

--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -91,7 +91,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"相信我，在这里你只能买到最好的装备！"
+ 	 	 	 	 	"相信我，在这里你能够买到最好的装备！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -108,7 +108,7 @@
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你的个人电脑。尽管稍微有些过时，但是如果肯耐心等一下的话还是很可靠的。",
+ 	 	 	 	"trans": "你的个人电脑，尽管稍微有些过时，但是如果肯耐心等一下的话还是很可靠的。",
  	 	 	 	"eng": "Your personal computer, although it's a little outdated, it can get the job done with enough patience"
  	 	 	},
  	 	 	"canAccessError": {
@@ -363,7 +363,7 @@
  	 	 	 	"eng": "Hyper Train Central Station"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[探索]\r\n        通过乘坐高速电磁环路列车, 你可以轻易的以超音速横跨整块大陆。",
+ 	 	 	 	"trans": "[探索]\r\n        通过乘坐高速电磁环路列车, 你可以轻易地以超音速横跨整块大陆。",
  	 	 	 	"eng": "[Adventure]\r\n        Using the hyperloop, you can travel at supersonic speed across the continent with ease."
  	 	 	}
  	 	},
@@ -863,7 +863,7 @@
  	 	 	 	"eng": "Military Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可以在空气中部署上千个军用纳米机器人来治疗附近的玩家",
+ 	 	 	 	"trans": "可以在空中部署上千个军用纳米机器人来治疗附近的玩家",
  	 	 	 	"eng": "capable of dispatching thousands of military nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -873,7 +873,7 @@
  	 	 	 	"eng": "Advance Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可以在空气中部署上千个进阶纳米机器人，更高效地治疗附近的玩家",
+ 	 	 	 	"trans": "可以在空中部署上千个进阶纳米机器人，更高效地治疗附近的玩家",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -883,7 +883,7 @@
  	 	 	 	"eng": "High Quality Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可以在空气中部署上千个高级军用纳米机器人，快速并高效地治疗附近的玩家",
+ 	 	 	 	"trans": "可以在空中部署上千个高级军用纳米机器人，快速并高效地治疗附近的玩家",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -893,7 +893,7 @@
  	 	 	 	"eng": "Rare Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可以在空气中部署成千上万的个稀有纳米机器人，全面地治疗附近的玩家",
+ 	 	 	 	"trans": "可以在空中部署成千上万的个稀有纳米机器人，全面地治疗附近的玩家",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -923,7 +923,7 @@
  	 	 	 	"eng": "Hash Processor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一个有效的比特币挖取硬件, \r\n        可惜超频的使用会让其很容易烧毁,\r\n        可以在[工作中心]消耗它来获取比特币",
+ 	 	 	 	"trans": "一个有效的比特币挖取硬件, \r\n        可惜超频地使用会让其很容易烧毁,\r\n        可以在[工作中心]消耗它来获取比特币",
  	 	 	 	"eng": "Can be used as a dedicated hardware for BitCoin mining, \r\n        however due to overclocking, the processor is easily burntout,\r\n        You may use this to mine BitCoin at [JOB HUB]"
  	 	 	}
  	 	},
