--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -904,7 +904,7 @@
  	 	 	 	"eng": "Gang Invasion Order Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un simple appareil émetteur qui peut être lié à votre canal crypté de gang et donner un ordre d'invasion.\r\n        Cet objet est requis pour activer les donjons de gang",
+ 	 	 	 	"trans": "Un simple appareil émetteur qui peut être lié à ton canal crypté de gang et donner un ordre d'invasion.\r\n        Cet objet est requis pour activer les donjons de gang",
  	 	 	 	"eng": "A simple transmitter device that can be bind to your gang encrypted channel and give out invasion order.\r\n        This item is required to activate Gang Dungeons"
  	 	 	}
  	 	},
@@ -2722,7 +2722,7 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Le niveau des équipements imprimés et basé sur ton niveau d'impression, augmentez votre rang d'impression en imprimant plus d'objets",
+ 	 	 	 	 	 	"trans": "Le niveau des équipements imprimés et basé sur ton niveau d'impression, augmente ton rang d'impression en imprimant plus d'objets",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -3068,7 +3068,7 @@
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"abortWarning": {
- 	 	 	 	"trans": "En abandonnant, tu ne recevras aucune récompense et le matériel utilisé ne sera pas rendu.",
+ 	 	 	 	"trans": "En abandonnant, tu ne recevras aucune récompense et le matériel utilisé sera perdu.",
  	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	},
  	 	 	"marketShortcut": {
@@ -3157,7 +3157,7 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Dans les donjons, tu ne guériras pas après chaque combat, et les ennemis sont plus forts, mais il y a plus d'EXP et de récompenses",
+ 	 	 	 	 	"trans": "Dans les donjons, les ennemis sont plus forts et tu ne guériras pas après chaque combat, il y a cependant plus d'EXP et de butin",
  	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
@@ -4653,7 +4653,7 @@
  	 	},
  	 	"paypal": {
  	 	 	"paypalBonusTitle": {
- 	 	 	 	"trans": "Tous les achats PayPal garantissent 10% d'unités supplémentaires! le paiement par PayPal n'est disponible que sur la version Web du jeu",
+ 	 	 	 	"trans": "Tous les achats PayPal garantissent 10% d'unités supplémentaires. Le paiement par PayPal n'est disponible que sur la version Web.",
  	 	 	 	"eng": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser."
  	 	 	},
  	 	 	"paypalBonus": {
@@ -4723,7 +4723,7 @@
  	 	 	 	"eng": "Discard"
  	 	 	},
  	 	 	"warning": {
- 	 	 	 	"trans": "L'/Les objet(s) ci-dessus seront jetés et ne seront pas placés dans ton inventaire. Cette action est irréversible.",
+ 	 	 	 	"trans": "Les objets ci-dessus seront jetés et ne seront pas placés dans ton inventaire. Cette action est irréversible.",
  	 	 	 	"eng": "The item/items above will be discarded and not be placed into your inventory. This action is irreversible."
  	 	 	}
  	 	},
