--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1374,7 +1374,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko Game"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa!! ^_^\r\n        Viens jouer à MEGA Pachinko ! Avec la chance de gagner D'ÉNORMES RÉCOMPENSES\r\n        Seulement 5000 btc par session, OFFRE LIMITÉE !!! <3 <3 <3\r\n        # Merci à Militech pour avoir sponsorisé cet événement #",
+ 	 	 	 	"trans": "Konnichiwa !! ^_^\r\n        Viens jouer au MEGA Pachinko ! Avec la chance de gagner D'ÉNORMES RÉCOMPENSES \r\n  Seulement 5000 btc par session, OFFRE LIMITÉE !!! \r\n <3 <3 <3 \r\n        ## Merci à Militech pour avoir sponsorisé cet événement ##",
  	 	 	 	"eng": "Konnichiwa!! ^___^\r\n        Come play the MEGA Pachinko! With chance to win HUGE EPIC rewards\r\n        only 5000 btc per session, LIMITED TIME OFFER!!! <3<3<3\r\n        ##Special thanks for Militech for sponsoring this event##"
  	 	 	}
  	 	},
